fix scripts source / add watch, server to gulpfile

--- a/templates/common/src/index.jade
+++ b/templates/common/src/index.jade
@@ -60,3 +60,7 @@ html.no-js
     // bower:js
     // endbower
     // endbuild
+
+    // build:js({.tmp,src}) scripts/scripts.js
+    script(src='scripts/app.js')
+    // endbuild
