--- a/templates/common/src/index.jade
+++ b/templates/common/src/index.jade
@@ -56,6 +56,9 @@ html.no-js
     script(src="bower_components/json3/lib/json3.min.js")
     <![endif]-->
 
+    // templatecache
+    // endtemplatecache
+
     // build:js(.) scripts/vendor.js
     // bower:js
     // endbower
