add pure framework

--- a/templates/common/src/styles/main.styl
+++ b/templates/common/src/styles/main.styl
@@ -3,6 +3,10 @@ body
   padding-top 20px
   padding-bottom 20px
 
+.main-container
+  width 960px
+  margin 0 auto
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header, .marketing, .footer
   padding-left 15px
