add usemin and minify script to build process

--- a/templates/common/src/views/bootstrap/index.jade
+++ b/templates/common/src/views/bootstrap/index.jade
@@ -65,6 +65,6 @@ html.no-js
     // endbower
     // endbuild
 
-    // build:js({.tmp,src}) scripts/scripts.js
+    // build:js(.tmp) scripts/scripts.js
     script(src='scripts/app.js')
     // endbuild
