--- a/templates/common/src/views/pure/index.jade
+++ b/templates/common/src/views/pure/index.jade
@@ -6,7 +6,7 @@ html.no-js
     meta(name="description", content="")
     meta(name="viewport", content="width=device-width")
     // Place favicon.ico and apple-touch-icon.png in the root directory
-    // build:css(.) styles/vendor.css
+    // build:css(.tmp) styles/vendor.css
     // bower:css
     // endbower
     // endbuild
@@ -60,11 +60,11 @@ html.no-js
     script(src='//cdn.socket.io/socket.io-1.0.6.js')
     <% }%>
 
-    // build:js(.) scripts/vendor.js
+    // build:js(.tmp) scripts/vendor.js
     // bower:js
     // endbower
     // endbuild
 
-    // build:js({.tmp,src}) scripts/scripts.js
+    // build:js(.tmp) scripts/scripts.js
     script(src='scripts/app.js')
     // endbuild
