--- a/templates/common/src/views/bootstrap/index.jade
+++ b/templates/common/src/views/bootstrap/index.jade
@@ -6,7 +6,7 @@ html.no-js
     meta(name="description", content="")
     meta(name="viewport", content="width=device-width")
     // Place favicon.ico and apple-touch-icon.png in the root directory
-    // build:css(.) styles/vendor.css
+    // build:css(.tmp) styles/vendor.css
     // bower:css
     // endbower
     // endbuild
@@ -43,13 +43,13 @@ html.no-js
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     script.
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
+      ga('create', 'UA-XXXXX-X');
+      ga('send', 'pageview');
 
     <!--[if lt IE 9]>
     script(src="bower_components/es5-shim/es5-shim.js")
@@ -60,7 +60,7 @@ html.no-js
     script(src='//cdn.socket.io/socket.io-1.0.6.js')
     <% }%>
 
-    // build:js(.) scripts/vendor.js
+    // build:js(.tmp) scripts/vendor.js
     // bower:js
     // endbower
     // endbuild
