--- a/templates/common/src/views/pure/index.jade
+++ b/templates/common/src/views/pure/index.jade
@@ -6,11 +6,11 @@ html.no-js
     meta(name="description", content="")
     meta(name="viewport", content="width=device-width")
     // Place favicon.ico and apple-touch-icon.png in the root directory
-    // build:css(.tmp) styles/vendor.css
+    // build:css(.tmp) /styles/vendor.css
     // bower:css
     // endbower
     // endbuild
-    // build:css(.tmp) styles/main.css
+    // build:css(.tmp) /styles/main.css
     link(rel="stylesheet", href="styles/main.css")
     // endbuild
   body(ng-app="<%= scriptAppName %>")
@@ -52,19 +52,19 @@ html.no-js
       ga('send', 'pageview');
 
     <!--[if lt IE 9]>
-    script(src="bower_components/es5-shim/es5-shim.js")
-    script(src="bower_components/json3/lib/json3.min.js")
+    script(src="/bower_components/es5-shim/es5-shim.js")
+    script(src="/bower_components/json3/lib/json3.min.js")
     <![endif]-->
 
     <% if (socketio) {%>
     script(src='//cdn.socket.io/socket.io-1.0.6.js')
     <% }%>
 
-    // build:js(.tmp) scripts/vendor.js
+    // build:js(.tmp) /scripts/vendor.js
     // bower:js
     // endbower
     // endbuild
 
-    // build:js(.tmp) scripts/scripts.js
+    // build:js(.tmp) /scripts/scripts.js
     script(src='scripts/app.js')
     // endbuild
